@@ -24,6 +24,7 @@ Bugs fixed:
 - 3601661 Reenable no-fork http adapter mode
 - 2990304 Enhancements for sfcb
 - 2778345 There is no response at GetClass after CreateClass
+- 3603454 control should do type conversions on startup
 
 Changes in 1.4.3
 ================
